2009-10-09  Edward Nevill   <ed@camswl.com>

	* Added initial support for Shark + ARM asm

2009-10-09  Edward Nevill   <ed@camswl.com>

	* Bug fix to irem
	* Stop icedtea-debug build falling over in test_gamma

2009-10-08  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (stamps/icedtea.stamp, stamps/icedtea-debug.stamp):
	Add shark aliases to jvm.cfg.
	(stamps/add-zero.stamp): Install as shark if default vm is zero.
	* configure.ac: Allow shark as additional vm when default vm is zero.
	* INSTALL, README: Document new build options.

2009-10-06  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-s390-serialize.patch: New file.
	* Makefile.am: Apply the above.
	* HACKING: Document the above.

2009-10-05  Edward Nevill    <ed@camswl.com>

	* Support for generation of native libraries for JCK on ARM
	* Addition / updating of copyright notices
	* Support for building icedteat-debug (incomplete)
	* Minor performance optimisations
	* Fix to stack overflow checking

2009-10-01  Robert Schuster  <robertschuster@fsfe.org>

	* configure.ac: Added --with-cacao-src-dir option.
	* acinclude: New macro AC_CHECK_WITH_CACAO_SRC_DIR.
	* Makefile.am: Copy Cacao sources when USE_ALT_CACAO_SRC_DIR is used.

2009-09-03  Andrew John Hughes  <ahughes@redhat.com>

	PR icedtea/356
	* HACKING: Updated.
	* Makefile.am:
	Add two new patches.  Copy nss.cfg to jre/lib/security if
	NSS is enabled.
	* configure.ac:Check for NSS and set NSS_LIBDIR
	and ENABLE_NSS if found.
	* nss.cfg.in: Template for the nss configuration file.
	* patches/icedtea-nss-6763530.patch:
	Fix for Sun bug 6763530 which is triggered by newer
	versions of NSS.
	* patches/icedtea-nss-config.patch: Patch java.security
	with the PCKS11 provider configuration.
	
2009-09-25  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/assembler_zero.hpp: Moved ffi.h to...
	* ports/hotspot/src/cpu/zero/vm/globalDefinitions_zero.hpp: ...here.

	* ports/hotspot/src/cpu/zero/vm/deoptimizerFrame_zero.hpp: